code refactor, remove unnecessary console.log add update review endpoint
