# backend/src/routes/customer.js
@@ -7,4 +7,5 @@ router.get('/tutorialForCustomer', middleWares.checkAuthentication, customerCont
 router.post('/uploadCustomerProfile', middleWares.checkAuthentication, customerController.uploadCustomerProfile);
 router.get('/customerProfile', middleWares.checkAuthentication, customerController.getCustomerProfile);
 router.put('/createReview', middleWares.checkAuthentication, customerController.createReview);
+router.put('/updateReview/:reviewId', middleWares.checkAuthentication, customerController.updateReview);
 module.exports = router;
